--- a/config/content.htm
+++ b/config/content.htm
@@ -1,7 +1,6 @@
 <h1>w1-w2</h1>
-<p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置</p>
-<p><img alt="SpongeBob SquarePants (character) - Wikipedia" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/1200px-SpongeBob_SquarePants_character.svg.png"/></p>
-<h1>w6-7</h1>
+<p>建立一個bloger <a href="https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar">https://www.blogger.com/blogger.g?blogID=2375246514797626273#allposts/src=sidebar</a><br/><br/>建立一個github <a href="https://github.com/">https://github.com/</a>50833109<br/> <br/>1 super computer 超級電腦<br/>2 mainframe 伺服器主機<br/>3 server 伺服器 虛擬 實體<br/>4 pc 個人電腦<br/>5 microcontroller 微控制器<br/>6 mobile phone 手機<br/><br/>Port 戶號<br/>Nat <br/>DHCP動態網路位置,</p>
+<p><img alt="SpongeBob SquarePants (character) - Wikipedia" src="https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/1200px-SpongeBob_SquarePants_character.svg.png"/></p><h1>w6-7</h1>
 <h2>利用手機鏡頭當作 webcam</h2>
 <p>Android:<span> </span><a href="https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows">https://www.digitalcitizen.life/turn-android-smartphone-webcam-windows<br/></a> <br/>iPhone:<span> </span><a href="https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/">https://www.makeuseof.com/tag/use-your-iphone-as-a-webcam-heres-how-ios/</a> </p>
 <h2>讓手機可以利用電腦熱點上網</h2>
